ligolang/src/test/contracts/negative/vars_consts/assign_const_param_2.jsligo
let x = (a: int): int => {
  a = 42;
  return a;
};
